finished Home route

--- a/src/components/styles/sidebar.module.css
+++ b/src/components/styles/sidebar.module.css
@@ -2,14 +2,13 @@
   width: 20%;
   background-color: #f9fafb;
   padding: 20px;
-}
-
-.sidebar h2 {
-  margin-bottom: 20px;
+  font-weight: 500;
 }
 
 .sidebar ul {
+  padding-top: 30px;
   list-style-type: none;
+  padding-left: 10px;
 }
 
 .sidebar li {
