--- a/src/components/styles/logo.module.css
+++ b/src/components/styles/logo.module.css
@@ -1,13 +1,13 @@
 .container {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 5px;
   font-weight: 500;
 }
 
 .vfLogo {
   background-color: #7c3bed;
-  padding: 10px;
+  padding: 10px 8px;
   border-radius: 5px;
   color: #fff;
 }
