finished button toggle

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,3 +2,12 @@
   display: flex;
   height: 100vh;
 }
+
+.main {
+  padding: 20px;
+}
+
+.main h1 {
+  font-size: 16px;
+  padding-bottom: 20px;
+}
