--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@ a {
   color: inherit;
 }
 
+ul,
+li {
+  list-style-type: none;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
