--- a/src/pages/skills.module.css
+++ b/src/pages/skills.module.css
@@ -1,10 +1,28 @@
+.label {
+  margin-right: 10px;
+}
+
 .skill {
-  padding: 16px;
-  margin: 8px 0;
-  border: 1px solid #e0e0e0;
-  border-radius: 8px;
   display: flex;
-  font-weight: 500;
   gap: 10px;
+  padding: 20px 10px;
+  margin: 10px 0;
+  border: 1px solid #e0e0e0;
+  border-radius: 5px;
+  font-weight: 500;
   justify-content: space-between;
+}
+
+.roleName {
+  font-size: 14px;
+}
+
+.acquired {
+  background-color: #f3f4f6;
+  color: #7c3bed;
+}
+
+.error {
+  background-color: #ffdede;
+  color: #e34849;
 }
