--- a/src/pages/styles/skills.module.css
+++ b/src/pages/styles/skills.module.css
@@ -4,13 +4,18 @@
 
 .skill {
   display: flex;
-  gap: 10px;
-  padding: 20px 10px;
+  padding: 10px;
   margin: 10px 0;
   border: 1px solid #e0e0e0;
   border-radius: 5px;
   font-weight: 500;
   justify-content: space-between;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
 .roleName {
